# jitter-sampler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
src/: csv.c  csv.h  influx.c  influx.h  jitter.h  main.c
